[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/WeaponSelect.gd" type="Script" id=1]
[ext_resource path="res://Resources/Retron2000Small.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Sprites/weapon_regular_sword.png" type="Texture" id=3]

[node name="WeaponSelect" type="VBoxContainer"]
margin_right = 125.0
margin_bottom = 196.0
custom_constants/separation = 10
script = ExtResource( 1 )

[node name="WeaponName" type="Label" parent="."]
margin_right = 125.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 2 )
text = "Sword"
align = 1

[node name="WeaponSprite" type="TextureRect" parent="."]
margin_top = 32.0
margin_right = 125.0
margin_bottom = 132.0
rect_min_size = Vector2( 25, 100 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
stretch_mode = 6

[node name="DamageRow" type="HBoxContainer" parent="."]
margin_top = 142.0
margin_right = 125.0
margin_bottom = 164.0
custom_constants/separation = 40

[node name="DamageText" type="Label" parent="DamageRow"]
margin_right = 63.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 2 )
text = "Damage"

[node name="DamageValue" type="Label" parent="DamageRow"]
margin_left = 103.0
margin_right = 125.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2

[node name="SpeedRow" type="HBoxContainer" parent="."]
margin_top = 174.0
margin_right = 125.0
margin_bottom = 196.0

[node name="SpeedText" type="Label" parent="SpeedRow"]
margin_right = 55.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 2 )
text = "Speed"

[node name="SpeedValue" type="Label" parent="SpeedRow"]
margin_left = 59.0
margin_right = 125.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 2
